--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,9 @@
   --time-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   /* Breakpoints */
-  --phone-screen: 428px;
+  --phone-screen: 480px;
   --tablet-screen: 768px;
-  --desktop-screen: 1158px;
+  --desktop-screen: 1200px;
 }
 
 /* Body */
@@ -126,7 +126,7 @@ textarea {
 
 
 /* 1158px <= desktop screen <= infinity */
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1200px) {
   .container {
     max-width: 1158px;
     padding: 0 15px;
@@ -134,21 +134,25 @@ textarea {
 }
 
 .card-set {
-
+  display: flex;
+  flex-direction: column;
+  row-gap: 72px;
 
 }
 
 @media screen and (min-width: 768px) {
   .card-set {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    gap: var(--indent);
+    gap: 72px 24px;
     align-items: center;
+
   }
 
 }
 
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1200px) {
   .card-set {
     display: flex;
     flex-wrap: wrap;
@@ -164,11 +168,11 @@ textarea {
 
 @media screen and (min-width: 768px) {
   .card-set-item {
-   --items: 2
+    --items: 2
   }
-} 
+}
 
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1200px) {
   .card-set-item {
     --items: 4
   }
@@ -179,7 +183,7 @@ textarea {
   padding-bottom: 96px;
 }
 
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1200px) {
   .section {
     padding-top: 120px;
     padding-bottom: 120px;
@@ -231,9 +235,23 @@ textarea {
 }
 
 .nav-list {
-  display: flex;
-  gap: 40px;
-  align-items: center;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-list {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-list {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+  }
 }
 
 .nav-studio {
@@ -296,16 +314,51 @@ textarea {
 /* top line contacts */
 
 .contacts-list {
-  display: flex;
-  gap: 40px;
-  align-items: center;
-  margin-left: auto;
+  display: none;
 }
 
-.header-mailto {
-  padding-top: var(--indent);
-  padding-bottom: var(--indent);
-  color: var(--color-text-secondary);
+@media screen and (min-width: 768px) {
+  .contacts-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    align-items: center;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header-mailto {
+    display: block;
+    padding-top: 24px;
+    color: var(--color-text-secondary);
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-mailto {
+    padding-top: var(--indent);
+    padding-bottom: var(--indent);
+    color: var(--color-text-secondary);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 }
 
 .header-mailto:hover,
@@ -313,15 +366,55 @@ textarea {
   color: var(--color-focus-hover);
 }
 
-.header-tel {
-  padding-top: var(--indent);
-  padding-bottom: var(--indent);
-  color: var(--color-text-secondary);
+
+@media screen and (min-width: 768px) {
+  .header-tel {
+    display: block;
+    padding-bottom: 10px;
+    color: var(--color-text-secondary);
+    font-size: 12px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-tel {
+    padding-top: var(--indent);
+    padding-bottom: var(--indent);
+    color: var(--color-text-secondary);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
 }
 
 .header-tel:hover,
 .header-tel:focus {
   color: var(--color-focus-hover);
+}
+
+
+/* mobile button */
+
+.menu-burger {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 32px;
+  min-height: 22px;
+  margin-left: auto;
+  padding: 0;
+ border: none;
+ background: none;
+
+}
+
+@media screen and (min-width: 768px) {
+  .menu-burger {
+    display: none;
+  }
 }
 
 /**
@@ -331,11 +424,12 @@ textarea {
 */
 
 .section-hero {
-  max-width: 1440px;
-  max-height: 600px;
+  max-width: 428px;
+  max-height: 432px;
   margin-right: auto;
   margin-left: auto;
-  padding: 188px 0px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   background-color: var(--color-text-primary);
   background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/bg-hero-page1/people-office.jpg);
@@ -343,16 +437,74 @@ textarea {
   background-size: cover;
   background-repeat: no-repeat;
 }
+@media screen and (min-width: 768px) {
+  .section-hero {
+    max-width: 768px;
+    max-height: 436px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 112px;
+    padding-bottom: 108;
+    background-color: var(--color-text-primary);
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/bg-hero-page1/people-office.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-hero {
+    max-width: 1440px;
+    max-height: 600px;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 188px 0px;
+    background-color: var(--color-text-primary);
+    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+      url(../images/bg-hero-page1/people-office.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+}
+
 
 .hero-title {
-  width: 494px;
+  width: 320px;
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
   color: var(--color-text-hero);
   font-weight: 700;
-  font-size: 56px;
+  font-size: 36px;
   line-height: 1.1;
   text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .hero-title {
+    width: 496px;
+    margin: 0 auto;
+    margin-bottom: 40px;
+    color: var(--color-text-hero);
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-title {
+    width: 496px;
+    margin: 0 auto;
+    margin-bottom: 48px;
+    color: var(--color-text-hero);
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.1;
+    text-align: center;
+}
 }
 
 .hero-btn {
@@ -380,25 +532,29 @@ textarea {
   |============================
 */
 
-@media screen and (min-width: 1158px) {
-.thumb {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 264px;
-  height: 112px;
-  margin-bottom: 8px;
-  border-radius: 4px;
-  background: var(--color-btn-filter);
-}
+@media screen and (min-width: 1200px) {
+  .thumb {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 264px;
+    height: 112px;
+    margin-bottom: 8px;
+    border-radius: 4px;
+    background: var(--color-btn-filter);
+  }
 }
 
-@media screen and (min-width: 1158px) {
 .svg-features {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
+  display: none;
+
 }
+
+@media screen and (min-width: 1200px) {
+  .svg-features {
+    display: block;
+    margin: 0 auto;
+  }
 }
 
 .feature-title {
@@ -406,41 +562,58 @@ textarea {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
-  }
+  text-align: center;
+}
 
-@media screen and (min-width: 1158px) {
+
+@media screen and (min-width: 768px) {
+  .feature-title {
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .feature-title {
     margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
   }
-  }
+}
 
 .feature-text {
-  width: 396px;
-  font-weight: 500;
   color: var(--color-text-secondary);
+  font-weight: 500;
 }
+
 
 @media screen and (min-width: 768px) {
   .feature-text {
-      width: 356px;
-  }
-  }
+    width: 356px;
 
-@media screen and (min-width: 1158px) {
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .feature-text {
-    font-weight: 400;
+
     width: 264px;
+    font-weight: 400;
   }
-  }
+}
 
 /**
   |============================
   | section What
   |============================
 */
+
+@media screen and (min-width: 0px) and (max-width: 1199.98px) {
+  .section-what {
+    display: none;
+  }
+}
+
 
 .section-what {
   padding-top: 0;
@@ -467,12 +640,34 @@ textarea {
 */
 
 .team {
-  width: 1440px;
-  height: 770px;
+  width: 428px;
+  height: 2264px;
   margin-right: auto;
   margin-left: auto;
-  padding-bottom: 110px;
+  padding-bottom: 128px;
   background-color: var(--color-btn-filter);
+}
+
+@media screen and (min-width: 768px) {
+  .team {
+    width: 768px;
+    height: 1232px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 104px;
+    background-color: var(--color-btn-filter);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    width: 1440px;
+    height: 770px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-bottom: 110px;
+    background-color: var(--color-btn-filter);
+  }
 }
 
 .our-title {
@@ -484,11 +679,29 @@ textarea {
 }
 
 .card {
+  width: 260.35px;
+  height: 428px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 0px 0px 4px 4px;
   background-color: var(--color-text-hero);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
+@media screen and (min-width: 768px) {
+  .card {
+    width: 264px;
+    height: 428px;
+    margin-left: auto;
+  margin-right: auto;
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--color-text-hero);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+      0px 2px 1px rgba(46, 47, 66, 0.08);
+  }
+}
+
 
 .card-team {
   padding-top: 32px;
@@ -965,6 +1178,165 @@ textarea {
 
 }
 
+/**
+  |============================
+  | mobile menu
+  |============================
+*/
+.menu-toggle {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--color-text-footer);
+  fill: #000000;
+
+  transition: transform 250ms var(--time-function), fill 250ms var(--time-function);
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+  box-sizing: border-box;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100vw;
+  height: 100vh;
+  padding: 40px;
+  background-color: var(--color-text-hero);
+  transition: transform 250ms var(--time-function) ease-in-out;
+
+  transform: translateX(100%);
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+
+.mobile-nav-list{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  padding-top: 80px;
+
+}
+
+.mobile-nav-studio{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+
+}
+
+.mobile-nav-studio:hover,
+.mobile-nav-studio:focus {
+  color: var(--color-focus-hover);
+}
+
+
+.mobile-nav-portfolio{
+   font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  
+}
+
+.mobile-nav-portfolio:hover,
+.mobile-nav-portfolio:focus {
+  color: var(--color-focus-hover);
+}
+
+.mobile-nav-contacts{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+
+}
+
+.mobile-nav-contacts:hover,
+.mobile-nav-contacts:focus {
+  color: var(--color-focus-hover);
+}
+
+.mobile-contacts-list {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-top: auto;
+}
+
+.mobile-header-tel{
+  display: flex;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: var(--color-text-secondary);
+  margin-top: auto;
+}
+
+.mobile-header-tel:hover,
+.mobile-header-tel:focus {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  color: var(--color-focus-hover);
+}
+.mobile-header-mailto {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  color: var(--color-text-secondary);
+}
+
+.mobile-header-mailto:hover,
+.mobile-header-mailto:focus {
+  font-weight: 600;
+font-size: 36px;
+line-height: 1.11;
+  color: var(--color-focus-hover);
+}
+
+/* socials mobile */
+.socials-mobile {
+  display: flex;
+  align-items: stretch;
+  gap: 56px;
+  justify-content: center;
+  margin-top: 48px;
+}
+
+.mobile-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+   width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--color-logo-primary);
+  fill: var(--color-logo-footer);
+
+  transition: background-color 250ms var(--time-function);
+}
+
+.mobile-social-link:hover,
+.mobile-social-link:focus {
+  background-color: var(--color-focus-hover);
+}
 /**
   |============================
   |  Portfolio page 2
