--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ ol {
 
 img {
   display: block;
+
 }
 
 .link {
@@ -142,8 +143,7 @@ textarea {
 
 @media screen and (min-width: 768px) {
   .card-set {
-    display: flex;
-    flex-direction: row;
+     flex-direction: row;
     flex-wrap: wrap;
     gap: 72px 24px;
     align-items: center;
@@ -154,10 +154,8 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .card-set {
-    display: flex;
-    flex-wrap: wrap;
-    gap: var(--indent);
-    align-items: center;
+       gap: var(--indent);
+  
   }
 }
 
@@ -246,14 +244,6 @@ textarea {
   }
 }
 
-@media screen and (min-width: 1200px) {
-  .nav-list {
-    display: flex;
-    gap: 40px;
-    align-items: center;
-  }
-}
-
 .nav-studio {
   position: relative;
   padding-top: var(--indent);
@@ -330,11 +320,9 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .contacts-list {
-    display: flex;
-    flex-direction: row;
+     flex-direction: row;
     gap: 40px;
-    align-items: center;
-    margin-left: auto;
+ 
   }
 }
 
@@ -353,9 +341,7 @@ textarea {
   .header-mailto {
     padding-top: var(--indent);
     padding-bottom: var(--indent);
-    color: var(--color-text-secondary);
-    font-weight: 400;
-    font-size: 16px;
+       font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
   }
@@ -382,9 +368,7 @@ textarea {
   .header-tel {
     padding-top: var(--indent);
     padding-bottom: var(--indent);
-    color: var(--color-text-secondary);
-    font-weight: 400;
-    font-size: 16px;
+      font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
   }
@@ -441,16 +425,8 @@ textarea {
   .section-hero {
     max-width: 768px;
     max-height: 436px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-top: 112px;
-    padding-bottom: 108;
-    background-color: var(--color-text-primary);
-    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-      url(../images/bg-hero-page1/people-office.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    padding-bottom: 108px;
+  
   }
 }
 
@@ -458,22 +434,14 @@ textarea {
   .section-hero {
     max-width: 1440px;
     max-height: 600px;
-    margin-right: auto;
-    margin-left: auto;
     padding: 188px 0px;
-    background-color: var(--color-text-primary);
-    background-image: linear-gradient(to right, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
-      url(../images/bg-hero-page1/people-office.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+ 
   }
 }
 
 
 .hero-title {
-  width: 320px;
-  margin: 0 auto;
+   margin: 0 auto;
   margin-bottom: 72px;
   color: var(--color-text-hero);
   font-weight: 700;
@@ -484,27 +452,17 @@ textarea {
 @media screen and (min-width: 768px) {
   .hero-title {
     width: 496px;
-    margin: 0 auto;
-    margin-bottom: 40px;
-    color: var(--color-text-hero);
-    font-weight: 700;
-    font-size: 56px;
+        margin-bottom: 40px;
+      font-size: 56px;
     line-height: 1.07;
-    text-align: center;
-  }
+ 
+    }
 }
 
 @media screen and (min-width: 1200px) {
   .hero-title {
-    width: 496px;
-    margin: 0 auto;
-    margin-bottom: 48px;
-    color: var(--color-text-hero);
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.1;
-    text-align: center;
-}
+      margin-bottom: 48px;
+   }
 }
 
 .hero-btn {
@@ -574,7 +532,6 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .feature-title {
-    margin-bottom: 8px;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -596,7 +553,6 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .feature-text {
-
     width: 264px;
     font-weight: 400;
   }
@@ -653,10 +609,8 @@ textarea {
   .team {
     max-width: 768px;
     height: 1232px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-bottom: 104px;
-    background-color: var(--color-btn-filter);
+      padding-bottom: 104px;
+ 
   }
 }
 
@@ -664,10 +618,8 @@ textarea {
   .team {
     max-width: 1440px;
     height: 770px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-bottom: 110px;
-    background-color: var(--color-btn-filter);
+     padding-bottom: 110px;
+  
   }
 }
 
@@ -680,8 +632,9 @@ textarea {
 }
 
 .card {
-  width: 260.35px;
-  height: 428px;
+  background-size: 260.35px 428px;
+  /* width: 260.35px;
+  height: 428px; */
   margin-left: auto;
   margin-right: auto;
   border-radius: 0px 0px 4px 4px;
@@ -692,8 +645,9 @@ textarea {
 
 @media screen and (min-width: 768px) {
   .card {
-    width: 264px;
-    height: 428px;
+    background-size: 264px 428px;
+         /* width: 264px;
+    height: 428px; */
     margin-left: auto;
   margin-right: auto;
     border-radius: 0px 0px 4px 4px;
@@ -979,13 +933,14 @@ textarea {
 
 .modal {
   position: absolute;
+  width: 320px;
   top: 50%;
   left: 50%;
   padding-top: 72px;
-  padding-right: 24px;
+  padding-right: 16px;
+  padding-left: 16px;
   padding-bottom: 24px;
-  padding-left: 24px;
-  border-radius: 4px;
+   border-radius: 4px;
 
   background-color: var(--color-bg-modal);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -993,6 +948,21 @@ textarea {
 
   transition: transform 250ms var(--time-function);
   transform: translate(-50%, -50%) scale(1);
+}
+@media screen and (min-width: 428px) {
+  .modal {
+  width: 392px;
+   
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 408px;
+    padding-right: 24px;
+    padding-left: 24px;
+
+  }
 }
 
 .close-btn-thumb {
@@ -1002,8 +972,8 @@ textarea {
 
 .close-btn {
   position: absolute;
-  top: 15px;
-  right: 15px;
+  top: 24px;
+  right: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1035,8 +1005,14 @@ textarea {
 }
 
 .order-form {
-  width: 360px;
+  min-width: 320;
   margin: 0;
+}
+@media screen and (min-width: 480px) {
+  .order-form {
+   width: 360px;
+    margin: 0;
+  }
 }
 
 .order-form-label {
@@ -1111,7 +1087,6 @@ textarea {
 
 .order-form-agreement {
   display: flex;
-
   gap: 8px;
   justify-content: flex-start;
   align-items: center;
@@ -1212,6 +1187,7 @@ textarea {
   display: flex;
   flex-direction: column;
   position: fixed;
+flex-wrap: wrap;
   top: 0;
   left: 0;
   z-index: 999;
@@ -1315,7 +1291,7 @@ line-height: 1.11;
 /* socials mobile */
 .socials-mobile {
   display: flex;
-  align-items: stretch;
+  flex-wrap: wrap;
   gap: 56px;
   justify-content: center;
   margin-top: 48px;
