--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,6 @@ textarea {
   margin-right: auto;
   margin-left: auto;
   padding: 0 16px;
-  outline: 2px solid red;
-  outline-offset: -2px;
 }
 
 
@@ -779,8 +777,7 @@ textarea {
 */
 
 .footer {
-  min-width: 320;
-  max-width: 428px;
+  width: 428px;
   height: 662px;
   margin-right: auto;
   margin-left: auto;
@@ -802,16 +799,16 @@ textarea {
   .footer {
     width: 1440px;
     height: 310px;
-  
+
   }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767.99px) {
+@media screen and (min-width: 0px) and (max-width: 767.99px) {
   .flex-footer {
     display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -819,34 +816,41 @@ align-items: center;
   .flex-footer {
     display: flex;
 flex-wrap: wrap;
+gap: 72px 24px;
+
   }
 }
 
 @media screen and (min-width: 1200px) {
   .flex-footer {
     display: flex;
-  
+
   }
 }
 
 
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+@media screen and (min-width: 0px) and (max-width: 767.98px) {
   .logo-footer {
     display: flex;
-    justify-content: center;
     flex-direction: column;
+    justify-content: center;
     margin-bottom: 72px;
-    }
+   
+   }
 }
-
-
-
+@media screen and (min-width: 768px) and (max-width: 1199.99px) {
+  .logo-footer {
+    display: flex;
+    flex-direction: column;
+    margin-left: 108px;
+   }
+}
 
 .footer-logo {
   display: block;
-  margin-left: auto;
   margin-right: auto;
   margin-bottom: 16px;
+  margin-left: auto;
   color: var(--color-logo-footer);
   font-weight: 800;
   font-size: 18px;
@@ -855,7 +859,19 @@ flex-wrap: wrap;
   letter-spacing: 0.03em;
 }
 
-
+@media screen and (min-width: 768px) and (max-width: 1199.99px){
+  .footer-logo {
+    display: inline;
+    margin-left: 0;
+         margin-bottom: 16px;
+       color: var(--color-logo-footer);
+    font-weight: 800;
+    font-size: 18px;
+    font-family: 'Raleway';
+    line-height: 1.2;
+    letter-spacing: 0.03em;
+  }
+}
 .footer-logo:hover,
 .footer-logo:focus {
   color: var(--color-focus-hover);
@@ -870,21 +886,21 @@ flex-wrap: wrap;
 
 /* social footer */
 
-@media screen and (min-width: 320px) and (max-width: 767.98px) {
+@media screen and (min-width: 0px) and (max-width: 767.98px) {
   .social-footer {
     display: flex;
-   flex-direction: column;
-   align-items: center;
-   margin-left: auto;
-   margin-right: auto;
-   margin-bottom: 72px;
-    }
+    flex-direction: column;
+    align-items: center;
+    margin-right: auto;
+    margin-bottom: 72px;
+    margin-left: auto;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .social-media {
     margin-left: 120px;
- }
+  }
 }
 
 
@@ -921,12 +937,23 @@ flex-wrap: wrap;
 
 /* form footer */
 
-/* .form-footer {
-  display: flex;
-  justify-content: center;
-  margin-left: auto;
-} */
-
+@media screen and (min-width: 0px) and (max-width: 767.98px) {
+  .form-footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+   
+  }
+}
+@media screen and (min-width: 768px) {
+  .form-footer {
+   display: flex;
+   justify-content: center;
+   gap: var(--indent);
+  
+   
+  }
+}
 @media screen and (min-width: 1200px) {
   .form-footer {
     display: flex;
@@ -935,27 +962,43 @@ flex-wrap: wrap;
   }
 }
 
-.email-form-label {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  color: var(--color-text-hero);
-  font-weight: 500;
+
+@media screen and (min-width: 0px) and (max-width: 767.98px) {
+  .email-form-label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: var(--color-text-hero);
+    font-weight: 500;
+  }
 }
 
-@media screen and (min-width: 320px) and (max-width: 767.98px){
-.email-form-label {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: var(--color-text-hero);
-  font-weight: 500;
-}
+@media screen and (min-width: 768px) and (max-width: 1199.99px){
+  .email-form-label {
+    display: flex;
+    flex-direction: column;
+    margin-left: 108px;
+    color: var(--color-text-hero);
+    font-weight: 500;
+  }
 }
 
+
+@media screen and (min-width: 1200px) {
+  .email-form-label {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: var(--color-text-hero);
+    font-weight: 500;
+  }
+}
+
+
+@media screen and (min-width: 0px) and (max-width: 767.98px){
 .email-form-input {
-  width: 264px;
+ width: 398px;
   height: 40px;
   margin-top: 16px;
   padding: 8px 16px;
@@ -973,43 +1016,62 @@ flex-wrap: wrap;
 
   transition: background-color 250ms var(--time-function);
 }
-
-@media screen and (min-width: 320px) and (max-width: 767.98px){
-.email-form-input {
-  min-width: 320;
-  max-width: 398px;
-  height: 40px;
-  margin-top: 16px;
-  padding: 8px 16px;
-
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 4px;
-  background-color: var(--color-text-primary);
-  color: rgba(255, 255, 255, 0.6);
-  outline: none;
-
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-
-  transition: background-color 250ms var(--time-function);
 }
+
+@media screen and (min-width: 768px){
+  .email-form-input {
+   width: 264px;
+    height: 40px;
+     margin-top: 16px;
+    padding: 8px 16px;
+  
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: var(--color-text-primary);
+    color: rgba(255, 255, 255, 0.6);
+    outline: none;
+  
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  
+    transition: background-color 250ms var(--time-function);
+  }
+  }
+
+@media screen and (min-width: 1200px) {
+  .email-form-input {
+    width: 264px;
+    height: 40px;
+    margin-top: 16px;
+    padding: 8px 16px;
+  
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: var(--color-text-primary);
+    color: rgba(255, 255, 255, 0.6);
+    outline: none;
+  
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  
+    transition: background-color 250ms var(--time-function);
+  }
 }
+
 
 
 .email-form-input:focus {
   border: 1px solid var(--color-logo-primary);
   border-radius: 4px;
 }
-/* 
-.footer-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: 24px;
-} */
-@media screen and (min-width: 320px) and (max-width: 767.98px){
+
+
+
+@media screen and (min-width: 0px) and (max-width: 767.98px){
   .footer-btn {
     display: flex;
     justify-content: center;
@@ -1017,10 +1079,20 @@ flex-wrap: wrap;
 
   }
 }
+
+@media screen and (min-width: 1200px) {
+  .footer-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+  }
+}
+
 .footer-form-btn {
   display: flex;
   align-items: center;
-  margin-top: 10px;
+  margin-top: 16px;
   padding: 10px 24px;
 
   border-radius: 4px;
@@ -1032,6 +1104,20 @@ flex-wrap: wrap;
   line-height: 1.5;
   letter-spacing: 0.04em;
 }
+@media screen and (min-width: 768px) and (max-width: 1199.99px) {
+  .footer-form-btn {
+  margin-top: 37px;
+  
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-form-btn {
+    margin-top: 10px;
+    
+    }
+}
+
 
 .footer-form-btn:hover,
 .footer-form-btn:focus {
