--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,6 @@ textarea {
 
 /* 320px <= phone screen <= infinity */
 .container {
-  min-width: 320px;
   max-width: 428px;
   margin-right: auto;
   margin-left: auto;
@@ -147,7 +146,16 @@ textarea {
     align-items: center;
 
   }
-
+}
+  
+@media screen and (min-width: 768px) {
+  .card-set.team {
+    gap: 64px 24px;
+justify-content: center;
+    align-items: center;
+padding: 0;
+  }
+ 
 }
 
 @media screen and (min-width: 1200px) {
@@ -165,6 +173,7 @@ textarea {
 @media screen and (min-width: 768px) {
   .card-set-item {
     --items: 2
+
   }
 }
 
@@ -406,8 +415,8 @@ textarea {
 */
 
 .section-hero {
-  max-width: 428px;
-  max-height: 432px;
+  /* max-width: 428px; */
+  /* max-height: 432px; */
   margin-right: auto;
   margin-left: auto;
   padding-top: 112px;
@@ -422,8 +431,8 @@ textarea {
 
 @media screen and (min-width: 768px) {
   .section-hero {
-    max-width: 768px;
-    max-height: 436px;
+    /* max-width: 768px;
+    max-height: 436px; */
     padding-bottom: 108px;
 
   }
@@ -432,7 +441,7 @@ textarea {
 @media screen and (min-width: 1200px) {
   .section-hero {
     max-width: 1440px;
-    max-height: 600px;
+    /* max-height: 600px; */
     padding: 188px 0px;
 
   }
@@ -594,33 +603,30 @@ textarea {
 */
 
 .team {
-  min-width: 320px;
-  max-width: 428px;
-  height: 2264px;
   margin-right: auto;
   margin-left: auto;
   padding-bottom: 128px;
   background-color: var(--color-btn-filter);
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px){
   .team {
-    max-width: 768px;
-    height: 1232px;
-    padding-bottom: 104px;
+      padding-bottom: 104px;
 
   }
 }
 
 @media screen and (min-width: 1200px) {
   .team {
-    max-width: 1440px;
-    height: 770px;
-    padding-bottom: 110px;
+  padding-bottom: 110px;
 
   }
 }
-
+@media screen and (min-width: 768px) and (max-width: 1199.99px){
+.team-cont {
+max-width: 584px;
+}
+}
 .our-title {
   margin-bottom: 72px;
   font-weight: 700;
@@ -629,23 +635,35 @@ textarea {
   text-align: center;
 }
 
+
+@media screen and (min-width: 320px) and (max-width: 767.99px) {
 .card {
   margin-right: auto;
   margin-left: auto;
   border-radius: 0px 0px 4px 4px;
   background-color: var(--color-text-hero);
-  background-size: 260.35px 428px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
 }
-
-@media screen and (min-width: 768px) {
-  .card {
-    background-size: 264px 428px;
-
+}
+@media screen and (min-width: 767.99px) and (max-width: 1199.99px) {
+  .card.card-set-item {
+       border-radius: 0px 0px 4px 4px;
+    background-color: var(--color-text-hero);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+      0px 2px 1px rgba(46, 47, 66, 0.08);
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .card {
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--color-text-hero);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+      0px 2px 1px rgba(46, 47, 66, 0.08);
+
+  }
+}
 
 .card-team {
   padding-top: 32px;
@@ -777,8 +795,7 @@ textarea {
 */
 
 .footer {
-  width: 428px;
-  height: 662px;
+
   margin-right: auto;
   margin-left: auto;
   padding-top: 96px;
@@ -788,8 +805,7 @@ textarea {
 
 @media screen and (min-width: 768px) {
   .footer {
-    width: 768px;
-    height: 454px;
+   
     padding-top: 100px;
     padding-bottom: 100px;
   }
@@ -797,13 +813,12 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .footer {
-    width: 1440px;
-    height: 310px;
+ 
 
   }
 }
 
-@media screen and (min-width: 0px) and (max-width: 767.99px) {
+@media screen and (min-width: 320px) and (max-width: 767.99px) {
   .flex-footer {
     display: flex;
     flex-direction: column;
@@ -829,7 +844,7 @@ gap: 72px 24px;
 }
 
 
-@media screen and (min-width: 0px) and (max-width: 767.98px) {
+@media screen and (min-width: 320px) and (max-width: 767.98px) {
   .logo-footer {
     display: flex;
     flex-direction: column;
@@ -862,8 +877,8 @@ gap: 72px 24px;
 @media screen and (min-width: 768px) and (max-width: 1199.99px){
   .footer-logo {
     display: inline;
-    margin-left: 0;
          margin-bottom: 16px;
+    margin-left: 0;
        color: var(--color-logo-footer);
     font-weight: 800;
     font-size: 18px;
@@ -948,8 +963,8 @@ gap: 72px 24px;
 @media screen and (min-width: 768px) {
   .form-footer {
    display: flex;
-   justify-content: center;
    gap: var(--indent);
+   justify-content: center;
   
    
   }
@@ -963,7 +978,7 @@ gap: 72px 24px;
 }
 
 
-@media screen and (min-width: 0px) and (max-width: 767.98px) {
+@media screen and (min-width: 320px) and (max-width: 767.98px) {
   .email-form-label {
     display: flex;
     flex-direction: column;
@@ -995,8 +1010,29 @@ gap: 72px 24px;
   }
 }
 
+@media screen and (min-width: 320px) and (max-width: 427.98px){
+  .email-form-input {
+   width: 310px;
+    height: 40px;
+    margin-top: 16px;
+    padding: 8px 16px;
+  
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: var(--color-text-primary);
+    color: rgba(255, 255, 255, 0.6);
+    outline: none;
+  
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  
+    transition: background-color 250ms var(--time-function);
+  }
+  }
 
-@media screen and (min-width: 0px) and (max-width: 767.98px){
+@media screen and (min-width: 428px){
 .email-form-input {
  width: 398px;
   height: 40px;
@@ -1021,48 +1057,9 @@ gap: 72px 24px;
 @media screen and (min-width: 768px){
   .email-form-input {
    width: 264px;
-    height: 40px;
-     margin-top: 16px;
-    padding: 8px 16px;
-  
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
-    background-color: var(--color-text-primary);
-    color: rgba(255, 255, 255, 0.6);
-    outline: none;
-  
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  
-    transition: background-color 250ms var(--time-function);
+ 
   }
   }
-
-@media screen and (min-width: 1200px) {
-  .email-form-input {
-    width: 264px;
-    height: 40px;
-    margin-top: 16px;
-    padding: 8px 16px;
-  
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 4px;
-    background-color: var(--color-text-primary);
-    color: rgba(255, 255, 255, 0.6);
-    outline: none;
-  
-    font-size: 12px;
-    line-height: 2;
-    letter-spacing: 0.04em;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  
-    transition: background-color 250ms var(--time-function);
-  }
-}
-
-
 
 .email-form-input:focus {
   border: 1px solid var(--color-logo-primary);
@@ -1070,24 +1067,12 @@ gap: 72px 24px;
 }
 
 
-
-@media screen and (min-width: 0px) and (max-width: 767.98px){
   .footer-btn {
     display: flex;
     justify-content: center;
     align-items: center;
 
   }
-}
-
-@media screen and (min-width: 1200px) {
-  .footer-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
- 
-  }
-}
 
 .footer-form-btn {
   display: flex;
@@ -1399,15 +1384,20 @@ gap: 72px 24px;
 
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background-color: var(--color-text-footer);
+
   fill: #000000;
 
-  transition: transform 250ms var(--time-function), fill 250ms var(--time-function);
+  transition: transform 250ms var(--time-function) ease-in-out;
 }
 
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+
+}
 .menu-toggle:hover,
 .menu-toggle:focus {
-  box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -1417,8 +1407,7 @@ gap: 72px 24px;
   left: 0;
   z-index: 999;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+    flex-direction: column;
   width: 100vw;
   height: 100vh;
   padding: 40px;
@@ -1437,7 +1426,7 @@ gap: 72px 24px;
   display: flex;
   flex-direction: column;
   gap: 40px;
-  padding-top: 80px;
+  padding-top: 32px;
 
 }
 
@@ -1524,17 +1513,14 @@ gap: 72px 24px;
   display: flex;
   flex-wrap: wrap;
   gap: 26px;
-  justify-content: center;
   margin-top: 48px;
+ 
 }
 
 @media screen and (min-width: 428px) {
   .socials-mobile {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 56px;
-    justify-content: center;
-    margin-top: 48px;
+      gap: 56px;
+  
   }
 }
 
