--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ ol {
 
 img {
   display: block;
-  
+
 }
 
 .link {
@@ -189,6 +189,7 @@ textarea {
     --items: 4
   }
 }
+
 /* basis project page */
 .prj-set-item {
   flex-basis: calc((100% - (var(--indent) * var(--prj-items))-1) / var(--prj-items));
@@ -840,18 +841,18 @@ textarea {
 }
 
 .thumb-customers-item {
-    flex-basis: calc((100% - (var(--indent) * 1)-1) / 2);
+  flex-basis: calc((100% - (var(--indent) * 1)-1) / 2);
 }
 
 @media screen and (min-width: 768px) {
   .thumb-customers-item {
-      flex-basis: calc((100% - (var(--indent) * 2)-1) / 3);
+    flex-basis: calc((100% - (var(--indent) * 2)-1) / 3);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .thumb-customers-item {
-       flex-basis: calc((100% - (var(--indent) * 5)-1) /6);
+    flex-basis: calc((100% - (var(--indent) * 5)-1) /6);
   }
 }
 
@@ -1060,7 +1061,6 @@ textarea {
   }
 }
 
-
 @media screen and (min-width: 320px) and (max-width: 767.98px) {
   .email-form-label {
     display: flex;
@@ -1095,7 +1095,7 @@ textarea {
 
 @media screen and (min-width: 320px) and (max-width: 427.98px) {
   .email-form-input {
-    width: 310px;
+    width: 100vw;
     height: 40px;
     margin-top: 16px;
     padding: 8px 16px;
@@ -1230,7 +1230,7 @@ textarea {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 320px;
+  width: 100vw;
   padding-top: 72px;
   padding-right: 16px;
   padding-bottom: 24px;
@@ -1639,20 +1639,21 @@ textarea {
   .section-portfolio {
     padding-top: 48px;
     padding-bottom: 48px;
-}
+  }
 }
 
 @media screen and (min-width: 768px) {
   .section-portfolio {
     padding-top: 64px;
     padding-bottom: 96px;
+  }
 }
-}
+
 @media screen and (min-width: 1200px) {
   .section-portfolio {
     padding-top: 96px;
     padding-bottom: 120px;
-}
+  }
 }
 
 
@@ -1660,11 +1661,11 @@ textarea {
 @media screen and (min-width: 320px) {
   .btn-list {
     display: flex;
-       flex-wrap: wrap;
-       column-gap: 24px;
+    flex-wrap: wrap;
     row-gap: 16px;
     margin-bottom: 48px;
-      
+    column-gap: 24px;
+
   }
 }
 
@@ -1677,7 +1678,7 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .btn-list {
-  margin-bottom: 72px;
+    margin-bottom: 72px;
   }
 }
 
@@ -1697,11 +1698,12 @@ textarea {
 }
 
 @media screen and (min-width: 768px) {
-.filter-btn {
-  padding: 12px 24px;
+  .filter-btn {
+    padding: 12px 24px;
 
+  }
 }
-}
+
 .filter-btn:hover,
 .filter-btn:focus,
 .filter-btn:active {
@@ -1786,24 +1788,24 @@ textarea {
 
 @media screen and (min-width: 320px) and (max-width: 427.98px) {
   .img {
-  
-    width: 396px;
-height: 280px;
-      }
+
+    width: 100vw;
+    height: 235px;
+  }
 }
 
 @media screen and (min-width: 428px) and (max-width: 767.98px) {
   .img {
     width: 396px;
 
-      }
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1198.98px) {
   .img {
     width: 356px;
-   
-    }
+
+  }
 }
 
 
@@ -1812,23 +1814,23 @@ height: 280px;
     display: flex;
     flex-direction: column;
     row-gap: 48px;
-    }
+  }
 }
 
 @media screen and (min-width: 768px) {
   .project-set {
     flex-direction: row;
-   flex-wrap: wrap;
-   gap: 24px;
-row-gap: 72px;
+    flex-wrap: wrap;
+    gap: 24px;
+    row-gap: 72px;
 
   }
 }
 
 @media screen and (min-width: 1200px) {
   .project-set {
+    row-gap: 40px;
     column-gap: 24px;
- row-gap: 40px;
   }
 }
 
